--- a/main/css/about-club.css
+++ b/main/css/about-club.css
@@ -12,7 +12,7 @@ background-color: rgb(248, 246, 255);
   
   .background-img {
     width: 100%;
-    height: 30vh ;
+    height: 40vh ;
     object-fit: cover;
     filter: brightness(50%); /* Adjust as needed */
     }
@@ -33,13 +33,18 @@ background-color: rgb(248, 246, 255);
      /* Adjust as needed */
 
   .overlay {
+    font-size: calc(0.8vw + 12px); /* Adjust base font size */
+    font-size: calc(0.8vw + 12px); /* Adjust base font size */
+
     position: absolute;
-    top: 70%;
-    left: 30%;
+    top: 80%;
+    left: 20%;
     transform: translate(-50%, -50%);
     display: flex;
     align-items: center;
   }
+  .logo:hover {
+fill: aqua;  }
   
   .logo {  background-color: transparent; /* Set background to transparent */
 
@@ -48,12 +53,16 @@ background-color: rgb(248, 246, 255);
     margin-right: 10px; /* Adjust spacing between logo and text */
   }
   
-  .text {
+  .text { font-weight: bold;
     color: white; /* Adjust text color */
-    font-size: 24px; /* Adjust text size */
-    width: 100%;
+font-size: 48px; 
+   width: 100%;
   }
-  
+  .text:hover {
+   
+    transition: 0.5s ease-in-out;
+    color: yellow;
+  }
   .details-box {    font-size: calc(0.7vw + 12px);
 position: relative;
 left: 50%;
@@ -224,6 +233,8 @@ color: rgb(0, 0, 0);
         gap: 10px; /* Add gap between cards */
     }
     .reward {
+      width: 200px;
+      height: auto;
         border: 1px solid #ccc; /* Add border */
         padding: 10px; /* Add padding */
     }
@@ -246,13 +257,22 @@ color: rgb(0, 0, 0);
     /* Hide year initially */
   }
   .reward {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+    border-radius: 24px;
+    height: auto;
       box-shadow: 1px solid #ccc; /* Add border */
       padding: 10px; /* Add padding */
   }
 }
 .reward img {
   transition: transform 0.3s;
+  width: 200px;
+  height: 300px;
 }
 .reward:hover img {
-  transform: scale(1.1); /* Zoom effect on hover */
+  transform: scale(1.1); /* Zoom effect on hover */ width: 200px;
+  height: 300px;
 }
